Fixed the overflow bug

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -39,7 +39,10 @@ html,
 #root,
 .bg {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
+    min-height: 100vh;
+    background-color: var(--clr-white);
+    /* overflow-x: hidden; */
 }
 
 button {
@@ -50,7 +53,7 @@ button {
 
 /* --Page default styling-- */
 .bg {
-    background-color: var(--clr-white);
+    overflow-x: hidden;
 }
 
 .navbar,
@@ -177,11 +180,11 @@ p, pre, .dropdown-link  {
 }
 
 [dropdown-menu-visible='false'] .dropdown-btn {
-    background-image: url('/public/images/icon-arrow-down.svg');
+    background-image: url('/images/icon-arrow-down.svg');
 }
 
 [dropdown-menu-visible='true'] .dropdown-btn {
-    background-image: url('/public/images/icon-arrow-up.svg');
+    background-image: url('/images/icon-arrow-up.svg');
 }
 
 [dropdown-menu-visible='false'] .dropdown-navbar {
@@ -300,6 +303,7 @@ p, pre, .dropdown-link  {
 
     .client-companies {
         padding-inline: 1em;
+        padding-block-end: 2em;
     }
 
     .navbar {
@@ -317,8 +321,7 @@ p, pre, .dropdown-link  {
         background-color: white;
         flex-direction: column;
         gap: 2rem;
-        height: 100%
-        width: 60%;
+        inset: 0 0 0 40%;
         right: 0;
         justify-content: flex-start;
         z-index: 1000;
@@ -334,12 +337,12 @@ p, pre, .dropdown-link  {
         gap: 2rem;
     }
 
-    [is-mobile-menu='false'].primary-navigation {
-       right: -100%;
+    [is-mobile-menu = 'true'].primary-navigation {
+        transform: translateX(100%);
     }
 
     .menu-btn {
-        background-image: url('/public/images/icon-menu.svg');
+        background-image: url('/images/icon-menu.svg');
 
     }
 
@@ -351,6 +354,7 @@ p, pre, .dropdown-link  {
     .big-btn {
         background-color: var(--clr-black);
         color: white;
+        /* padding-block: 1em; */
     }
 
     .big-btn:hover {
@@ -368,4 +372,10 @@ p, pre, .dropdown-link  {
     .nav__menu {
         flex-direction: column;
     }
+
+    .main-container__left-section article>p {
+        margin-block: 1rem;
+    }
+
+    /* [is-mobile-menu = 'true'] .main-container__left-section article>p */
 }
